--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
 
     //Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.2.5"
+
+    //LocalDate for API > 26
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
 }
