--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
 
     //LocalDate for API > 26
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
+
+    //Charts Lib
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
